# simple-uuid

./: Cargo.toml  LISENCE  README.md  actions.yml
.github/: uuid-rs_ci.yml
.github/workflows/: ci.yml  tests.yml  uuid-rs_ci.yml
benches/: bench.rs  benches.rs
src/: lib.rs  name.rs  name_based.rs  rand.rs  random.rs  random_based.rs  randy.rs  time.rs  time_based.rs  times.rs
src/base/: mod.rs  name.rs  rand.rs  time.rs
src/based/: mod.rs  name.rs  time.rs
tests/: integration.rs  macros.rs  uuid.rs
