[package]
name = "simple-uuid"
description = "A Simple Universally Unique IDentifier (UUID)"
authors = ["wahabz <awh6al@yandex.com>"]
documentation = "https://docs.rs/simple-uuid"
version = "0.1.0"
license = "MIT"
edition = "2018"
readme = "README.md"
categories = [
    "data-structures",
    "algorithms",
    "cryptography"
]
keywords = [
    "uuid",
    "unique",
    "global",
    "rand",
]
repository = "https://github.com/awh6al/simple-uuid"

[dependencies]
mac_address = { version = "1.0.3", optional = true }
rand = { version = "0.7.3", optional = true }
libc = { version = "0.2.93", optional = true, features=  ["std"] }
md5 = { version = "0.7.0", optional = true }
sha1 = { version = "0.6.0", optional = true }

[features]
default = ["mac", "random", "hash_md5", "hash_sha1"]
mac = ["mac_address", "rand", "libc"]
random = ["rand"]
hash_sha1 = ["sha1"]
hash_md5 = ["md5"]

[package.metadata.docs.rs]
all-features = true
